@@ -110,7 +110,11 @@
 			"*-kernels": {
 				"saturation": 190,
 				"foodcategory": "Protein"
-			}
+			},
+            "*-skins": {
+                "saturation": 0,
+                "foodcategory": "Grain"
+            }
 	},
 	"guiTransformByType": {
           "*": {
