@@ -1,65 +1,0 @@
-﻿[
-  {
-    "op": "addmerge",
-    "path": "/attributes/creatureDiet/foodTags/-",
-    "value": "peanuts",
-    "side": "server",
-    "file": "game:entities/land/chicken-rooster.json"
-  },
-  {
-    "op": "addmerge",
-    "path": "/attributes/creatureDiet/foodTags/-",
-    "value": "peanuts",
-    "side": "server",
-    "file": "game:entities/land/chicken-hen.json"
-  },
-  {
-    "op": "addmerge",
-    "path": "/attributes/creatureDiet/foodTags/-",
-    "value": "peanuts",
-    "side": "server",
-    "file": "game:entities/land/chicken-baby.json"
-  },
-  {
-    "op": "addmerge",
-    "path": "/attributes/creatureDiet/foodTags/-",
-    "value": "peanuts",
-    "side": "server",
-    "file": "game:entities/land/pig-wild-female.json"
-  },
-  {
-    "op": "addmerge",
-    "path": "/attributes/creatureDiet/foodTags/-",
-    "value": "peanuts",
-    "side": "server",
-    "file": "game:entities/land/pig-wild-male.json"
-  },
-  {
-    "op": "addmerge",
-    "path": "/attributes/creatureDiet/foodTags/-",
-    "value": "peanuts",
-    "side": "server",
-    "file": "game:entities/land/pig-wild-piglet.json"
-  },
-  {
-    "op": "addmerge",
-    "path": "/attributes/creatureDiet/foodTags/-",
-    "value": "peanuts",
-    "side": "server",
-    "file": "game:entities/land/raccoon-female.json"
-  },
-  {
-    "op": "addmerge",
-    "path": "/attributes/creatureDiet/foodTags/-",
-    "value": "peanuts",
-    "side": "server",
-    "file": "game:entities/land/raccoon-male.json"
-  },
-  {
-    "op": "addmerge",
-    "path": "/attributes/creatureDiet/foodTags/-",
-    "value": "peanuts",
-    "side": "server",
-    "file": "game:entities/land/raccoon-pup.json"
-  }
-]
