@@ -85,11 +85,9 @@ On hiatus until Wildcraft Herbs & Spices is updated
 - Soy milk changed to protein instead of dairy - MOSTLY DONE (check nutrition in foods/meals)
 - Yogurt can be added to fruit bars in place of gelatin
 - Pemmican can be placed in stacks
-- Soybean textures/shapes updated
 - Do stuff with bamboo shoots? idk
 - Muffins and fruit bread have default visuals in the handbook
 - Recipe notes added to meals in the handbook
-- Meal names fixed in handbook
 - Meal descriptions added
 - Handbook item grouping tightened up
 - Fruit press handbook entry states the minimum amount needed to work
@@ -101,6 +99,8 @@ BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
 - Hardened resin fixed so it hardens properly
 - Chopped veggies go into porridge
+- Peanut skins fixed so animals can eat them (egg shells fixed in ACA) - DONE!!!
+- Meal names fixed in handbook
 
 NEW FOOD:
 - added meatloaf?
@@ -111,6 +111,8 @@ MISC:
 - Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
 - Food can be put on the ground, I guess?
 - en.json cleansed of wildcraft text; generally cleaned up and reorganized
+- Peanut skin model changed
+- Soybean textures/shapes updated
 
 
 2.0.0-dev.3
